tzcode: Fix overflow handling in TZ parser.

Obtained from:	upstream 9fc11a27
MFC after:	1 week
PR:		276281